2005-02-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winioctl.h (IOCTL_VOLUME_BASE,
	IOCTL_VOLUME_GET_VOLUME_DISK_EXTENTS, IOCTL_VOLUME_IS_CLUSTERED):
	Copy defines from include/ddk/ntdddvol.h.
	Bug reported to Debian by Anand Kumria  <wildfire@progsoc.org>

2005-01-27  Oliver Stoeneberg  <oliverst@online.de>

	* include/winbase.h (PWIN32_FIND_DATA): Add typedef.

2005-01-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (SW_SMOOTHSCROLL): Add define. 
	Reported by: Christian Ehrlicher  <chehrlic@users.sf.net>

2005-01-21  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/commdlg.h (OFN_DONTADDTORECENT): Added definition.

2005-01-18  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/user32.def (MonitorFromPoint}: Correct suffix.

2005-01-13  Benoit Blanchon  <bblanchon@users.sourceforge.net>

	* include/wininet.h (InternetCheckConnectionA,
	InternetCheckConnectionW) Add prototypes.
	(INTERNET_RAS_INSTALLED, INTERNET_CONNECTION_OFFLINE,
	INTERNET_CONNECTION_CONFIGURED): Add defines.

2005-01-07  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/commctrl.h (ComboBox_SetMinVisible,
	ComboBox_GetMinVisible): Added Macros.
	* include/winuser.h (CB_SETMINVISIBLE, CB_GETMINVISIBLE):
	Added definitions.

2005-01-02  Jiri Malak  <Jiri.Malak@geac.cz>

	* include/winnt.h (GetCurrentFiber, GetFiberData): Make inline
	assembly code conditional on _X86_.

2005-01-02  Earnie Boyd  <earnie@users.sf.net>

	* include/w32api.h: Increment version.
	* Makefile.in: Ditto.
	* include/afxres.h: Remove the \r from the line ending.
	* include/errorrep.h: Ditto.
	* include/shldisp.h: Ditto.
	* include/tschema.h: Ditto.
	* lib/dhcpcsvc.def: Ditto.
	* lib/uxtheme.def: Ditto.
	* lib/wldap32.def: Ditto.

2005-01-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winerror.h (ERROR_EXE_CANNOT_MODIFY_STRONG_SIGNED_BINARY):
	Correct typo.
	Thanks to: Aidan France  <aidan1@users.sourceforge.net>
