@@ -70,4 +70,12 @@ extern GUID GUID_Slider;
 extern GUID GUID_Key;
 extern GUID GUID_POV;
 
+#if defined (__WATCOMC__)
+#define ATTRIBUTE_TEXT_SECTION __based( __segname( "_CODE" ) )
+#elif defined (__GNUC__)
+#define ATTRIBUTE_TEXT_SECTION  __attribute__ ((section(".text")))
+#else
+#define ATTRIBUTE_TEXT_SECTION
+#endif
+
 #endif
